package com.weekstone.learn.designpattern.abstractfactory.standard;

public interface Factory {

        ProductA createProductA();

        ProductB createProductB();
}
